[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.5"
eyre = "0.6.12"
lazy_static = "1.5.0"
log = "0.4.22"
pulldown-cmark = "0.12.2"
rinja = { version = "0.3.5", features = ["code-in-doc"] }
serde = { version = "1.0.216", features = ["derive"] }
syntect = "5.2.0"
tiny_http = "0.12.0"
toml = "0.8.19"
